[gd_scene load_steps=2 format=3 uid="uid://bqhs88q4rsl01"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_6pgod"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 317.0
offset_bottom = 434.0
script = ExtResource("1_6pgod")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Settings
"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Resolution
"

[node name="ResolutionOption" type="OptionButton" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckFullscreen" type="CheckButton" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscren"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound"

[node name="SoundBar" type="HScrollBar" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
value = 75.0

[node name="VBoxContainer6" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="MusicBar" type="HScrollBar" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer6"]
layout_mode = 2
value = 100.0

[node name="VBoxContainer5" type="VBoxContainer" parent="Panel/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmSetBtn" type="Button" parent="Panel/CenterContainer/VBoxContainer/VBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Ok"

[connection signal="item_selected" from="Panel/CenterContainer/VBoxContainer/VBoxContainer/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="toggled" from="Panel/CenterContainer/VBoxContainer/VBoxContainer3/CheckFullscreen" to="." method="_on_check_fullscreen_toggled"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/VBoxContainer5/ConfirmSetBtn" to="." method="_on_confirm_set_btn_pressed"]
